--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,6 @@
 ---
 install:
-  - set GEM_VERS=1.3.0
+  - set GEM_VERS=1.3.0.dev.1
   # Default path uses Ruby 1.9.3 ??
   - set PATH=C:\Ruby25-x64\bin;C:\Program Files\7-Zip;C:\Program Files\AppVeyor\BuildAgent;C:\Program Files\Git\cmd;C:\Windows\system32
 
